--- a/06_列表渲染/test.html
+++ b/06_列表渲染/test.html
@@ -17,14 +17,47 @@
 
 <div id="demo">
   <h2>测试: v-for 遍历数组</h2>
+  <ul>
+    <li v-for="(p, index) in persons" :key="index">
+      {{index}}---{{p.name}}---{{p.age}}
+      ---<button @click="deleteP(index)">删除</button>
+      ---<button @click="updateP(index, {name: 'Kobe', age: 37})">更新</button>
+    </li>
+  </ul>
 
   <h2>测试: v-for 遍历对象</h2>
+  <ul>
+    <li v-for="(value, key) in persons[1]" :key="key">
+      {{key}}={{value}}
+    </li>
+  </ul>
 
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el: '#demo',
+    data: {
+      persons: [
+        {name: 'Tom', age: 15},
+        {name: 'Jack', age: 13},
+        {name: 'Bob', age: 14},
+        {name: 'Rose', age: 18},
+        {name: 'Jerry', age: 17}
+      ]
+    },
 
+    methods: {
+      deleteP (index) {
+        this.persons.splice(index, 1) // 不是原生数组的splice方法, 而是变异方法(原生调用+更新界面)
+      },
+      updateP (index, newP) {
+        // this.persons[index] = newP // vue不知道变化了
+        this.persons.splice(index, 1, newP)
+      }
+    }
+  })
 </script>
 </body>
 </html>
