--- a/07_事件处理/test.html
+++ b/07_事件处理/test.html
@@ -21,18 +21,64 @@
 -->
 
 <div id="example">
-
   <h2>1. 绑定监听</h2>
+  <button @click="test1">test1</button>
+  <button @click="test2('abc')">test2</button>
+  <button @click="test3('cba', $event)">test3</button>
 
   <h2>2. 事件修饰符</h2>
+  <!--停止冒泡-->
+  <div style="width: 200px;height: 200px; background: red" @click="test4">
+    <div style="width: 100px;height: 100px; background: green" @click.stop="test5"></div>
+  </div>
+
+  <!--阻止默认行为-->
+  <a href="http://www.baidu.com" @click.prevent="test6">去百度</a>
 
   <h2>3. 按键修饰符</h2>
+  <input type="text" v-model="searchName" @keyup.13="test7">
+  <input type="text" v-model="searchName" @keyup.enter="test7">
 
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el: '#example',
+    data: {
+      searchName: ''
+    },
+    methods: {
+      test1 (event) {
+        alert(event.target.textContent)
+      },
 
+      test2 (msg) {
+        alert(msg)
+      },
+
+      test3 (msg, event) {
+        alert(msg + '---' + event.target.innerHTML)
+      },
+
+      test4 () {
+        alert('外面')
+      },
+      test5 (event) {
+        alert('里面')
+      },
+
+      test6 () {
+        alert('点击了链接')
+      },
+
+      test7 (event) {
+        //if(event.keyCode===13) {
+          alert(this.searchName+'---'+event.keyCode)
+        //}
+      }
+    }
+  })
 </script>
 </body>
 </html>
