--- a/06_列表渲染/test2.html
+++ b/06_列表渲染/test2.html
@@ -48,7 +48,7 @@
         persons = persons.filter(p => p.name.indexOf(searchName)!==-1)
         // 排序
         if(orderType) {
-          persons.sort(function (p1, p2) {
+          persons.sort((p1, p2) => {
             if(orderType===1) {
               return p1.age - p2.age
             } else {
