--- a/12_指令/test2.html
+++ b/12_指令/test2.html
@@ -24,13 +24,52 @@
 -->
 <!--
 需求: 自定义2个指令
-  1. 功能类型于v-text, 但转换为全大写
-  2. 功能类型于v-text, 但转换为全小写
+  1. 功能类型于v-text, 但转换为全大写  upper-text
+  2. 功能类型于v-text, 但转换为全小写  lower-text
 -->
+
+<div id="test">
+  <p v-upper-text="msg"></p>
+  <p v-lower-text="msg"></p>
+</div>
+
+<div id="test2">
+  <p v-upper-text="msg"></p>
+  <p v-lower-text="msg"></p>
+</div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  // 定义全局指令
+      // el: 指令属性所在的标签对象
+      // binding: 包含指令相关信息的对象
+  Vue.directive('upper-text', function (el, binding) {
+    console.log('upper-text', binding)
+    el.textContent = binding.value.toUpperCase()
+  })
 
+
+  new Vue({
+    el : '#test',
+    data : {
+      msg: 'I like You!'
+    },
+    // 注册局部指令
+    directives: {
+      'lower-text': {
+        bind (el, binding) {
+          el.innerHTML = binding.value.toLowerCase()
+        }
+      }
+    }
+  })
+
+  new Vue({
+    el : '#test2',
+    data : {
+      msg: 'I like You22222!'
+    },
+  })
 </script>
 </body>
 </html>
