--- a/13_插件/test.html
+++ b/13_插件/test.html
@@ -5,10 +5,23 @@
   <title>17_插件</title>
 </head>
 <body>
-
+<div id="test">
+  <p v-my-directive="msg"></p>
+</div>
 <script type="text/javascript" src="../js/vue.js"></script>
+<script type="text/javascript" src="./vue-plugin.js"></script>
 <script type="text/javascript">
+  // 声明使用vue插件
+  Vue.use(MyPlugin)// 背后会执行插件对象的install方法来安装插件
 
+  Vue.myGlobalMethod()
+  const vm = new Vue({
+    el: '#test',
+    data: {
+      msg: "hello world!"
+    }
+  })
+  vm.$instanceMethod()
 </script>
 </body>
 </html>
